@@ -77,7 +77,7 @@ non-option argument is taken as the sed script to interpret.  All
 remaining arguments are names of input files; if no input files are
 specified, then the standard input is read.
 .PP
-E-mail bug reports to: bonzini@gnu.org .
+E-mail bug reports to: <bonzini@gnu.org>.
 Be sure to include the word ``ssed'' somewhere in the ``Subject:'' field.
 .PP
 based on GNU sed version 4.2
