@@ -6,5 +6,5 @@ This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE,
 to the extent permitted by law.
 
-E-mail bug reports to: bonzini@gnu.org .
-Be sure to include the word ``sed'' somewhere in the ``Subject:'' field.
+E-mail bug reports to: <bonzini@gnu.org>.
+Be sure to include the word ``ssed'' somewhere in the ``Subject:'' field.
