@@ -1,3 +1,8 @@
+2009-02-17  Paolo Bonzini  <bonzini@gnu.org>
+
+	* sed/sed.c (usage): Print homepage URL.
+	* testsuite/version.gin: Update.
+
 2009-01-28  Paolo Bonzini  <bonzini@gnu.org>
 
 	* sed/sed.c (usage): Only print the bug report address for `sed --help'.
